--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,4 +6,7 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    <listener>
+        <listener-class>salar.webhuskeapp.Controller.AppStart</listener-class>
+    </listener>
 </web-app>
